# macrocorr

./: LICENSE.txt  README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml
Usage/: CATALOG.md  FUNCTIONS.md  catalog.md  test1.py
Usage/example/: example_basic.ipynb  test1.py
Usage/example/.ipynb_checkpoints/: example_basic-checkpoint.ipynb
macrocorr/: __init__.py  utils.py
macrocorr.egg-info/: PKG-INFO  SOURCES.txt
src/macrocorr/: __init__.py  correlator.py  macroIndicator.py  utils.py
test/: AAPL.csv
